make haarcascade directory

--- a/1-Deface the license plate.ipynb
+++ b/1-Deface the license plate.ipynb
@@ -103,7 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plate_cascade = cv2.CascadeClassifier('Data/haarcascade_russian_plate_number.xml')"
+    "plate_cascade = cv2.CascadeClassifier('Data/haarcascade_russian_plate_number.xml')\n",
+    "\n",
+    "# Ensure plate_cascade is defined correctly, replace with the correct classifier\n",
+    "# plate_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_russian_plate_number.xml')"
    ]
   },
   {
