--- a/1-Deface the license plate.ipynb
+++ b/1-Deface the license plate.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plate_cascade = cv2.CascadeClassifier('Data/haarcascade_russian_plate_number.xml')\n",
+    "plate_cascade = cv2.CascadeClassifier('Data/haarcascade/haarcascade_russian_plate_number.xml')\n",
     "\n",
     "# Ensure plate_cascade is defined correctly, replace with the correct classifier\n",
     "# plate_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_russian_plate_number.xml')"
@@ -131,7 +131,18 @@
     "    for (x, y, w, h) in plate_rects:\n",
     "        cv2.rectangle(plate_img, (x, y), (x + w, y + h), (0, 0, 255), 4)\n",
     "        \n",
-    "    return plate_img"
+    "    return plate_img\n",
+    "\n",
+    "\n",
+    "# scaleFactor : این پارامتر میزان تغییر اندازه تصویر را در هر مرحله برای شناسایی صورت‌ها مشخص می‌کند\n",
+    "# scaleFactor بیشتر از 1 باشد، تصویر در هر مرحله بزرگ‌تر می‌شود\n",
+    "# scaleFactor کمتر از 1 باشد، تصویر در هر مرحله کوچک‌تر می‌شود\n",
+    "\n",
+    "# مقدار 1.3 به این معنی است که تصویر در هر مرحله به اندازه 30٪ بزرگ تر می‌شود تا صورت‌ها در مقیاس‌های مختلف شناسایی شوند\n",
+    "# مقادیر بزرگتر باعث کاهش دقت شناسایی و مقادیر کوچکتر ممکن است منجر به افزایش زمان پردازش شوند\n",
+    "\n",
+    "# minNeighbors: تعداد حداقل همسایگان (یا اطرافیان) که برای شناسایی یک منطقه به عنوان صورت باید وجود داشته باشند\n",
+    "# مقدار پیش‌فرض آن 3 است"
    ]
   },
   {
