--- a/4-Volume_Hand_Control.ipynb
+++ b/4-Volume_Hand_Control.ipynb
@@ -317,7 +317,7 @@
     "        break\n",
     "    \n",
     "    elif k == ord('s'):\n",
-    "        filename = f'Volume_Hand_Control{current_time}.jpg'\n",
+    "        filename = f'Data/Volume_Hand_Control{current_time}.jpg'\n",
     "        cv2.imwrite(filename,frame)\n",
     "        print(f\"Image saved as {filename}\")\n",
     "        \n",
